[package]
name = "alibaba-cloud-kms"
version = "0.1.0"
edition = "2021"

[features]
default = []
use-meta-server-local-host = []

[dependencies]
aliyun-openapi-core-rust-sdk = "1.1.0"
reqwest = "0.11.27"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
